# GuitarEffects

./: .gitignore  CMakeLists.txt  Delay.cpp  DelayEffect.h  Effect.cpp  Effect.h  EffectManager.h  GuitarEffects.pro  GuitarEffects.vcxproj  GuitarEffects.vcxproj.filters  LICENSE  MainWindow.cpp  MainWindow.h  Overdrive.cpp  OverdriveEffect.h  README.md  Reverb.cpp  ReverbEffect.h  main.cpp
resources/: resources.qrc
src/core/: EffectManager.cpp  EffectManager.h  main.cpp
src/effects/: DelayEffect.cpp  OverdriveEffect.cpp  ReverbEffect.cpp
src/ui/: MainWindow.cpp  MainWindow.h
